chore: add scaffolding tests (compilation of generated code) to the CI process